--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@apollo/server": "^4.10.4",
     "@prisma/client": "^5.12.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
